build-configs.yaml: set sparc64 arch name to sparc
The architecture name used in the kernel tree for sparc64 is "sparc".
Building for sparc64 is done by using a sparc64 toolchain and a
sparc64 defconfig.

Signed-off-by: Guillaume Tucker <guillaume.tucker@collabora.com>

--- a/config/core/build-configs.yaml
+++ b/config/core/build-configs.yaml
@@ -416,6 +416,7 @@ build_configs_defaults:
                 kernel: ['v3.', 'v4.4', 'v4.9', 'v4.14']
 
         sparc64: &sparc64_arch
+          name: 'sparc'
           base_defconfig: 'sparc64_defconfig'
           extra_configs: ['allnoconfig']
 
