config/docker: fix trivial issue with apt-get update
Fix the classic mistake of not doing "apt-get update" on the same
line as "apt-get install".  See Docker best practices 101:

    https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#sort-multi-line-arguments


Signed-off-by: Guillaume Tucker <guillaume.tucker@collabora.com>

--- a/config/docker/clang-base/Dockerfile
+++ b/config/docker/clang-base/Dockerfile
@@ -59,7 +59,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
    pkg-config
 
 # perf x86
-RUN apt-get install --no-install-recommends -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
    libbabeltrace-dev \
    libcap-dev \
    libdw-dev \
@@ -74,7 +74,7 @@ RUN apt-get install --no-install-recommends -y \
    systemtap-sdt-dev
 
 # perf arm
-RUN apt-get install --no-install-recommends -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
    libbabeltrace-dev:armhf \
    libcap-dev:armhf \
    libdw-dev:armhf \
@@ -89,7 +89,7 @@ RUN apt-get install --no-install-recommends -y \
    systemtap-sdt-dev:armhf
 
 # perf arm64
-RUN apt-get install --no-install-recommends -y \
+RUN apt-get update && apt-get install --no-install-recommends -y \
    libbabeltrace-dev:arm64 \
    libcap-dev:arm64 \
    libdw-dev:arm64 \
